
5.2a3 -> 5.2a4:
    - jbj: fix: handle ./../foo paths correctly (#491388).
    - jbj: rpmlib: rescusitate splint annotations.
    - jbj: rpmdb: rescusitate splint annotations.
    - jbj: rpmtsOrder: fully enable parentdir deps when ordering.
    - jbj: EVRtuple: fix: dig out the one time mire allocation leak.
    - jbj: use rpmioFreePoolItem for rpmds, eliminate rpmdsFree.
    - jbj: finish up using rpmioFreePoolItem() for rpmts and Header objects.
    - devzero2000: continuing for refcount rewrite : add define of fooFree to rpmioFreePoolItem
    - devzero2000: begin change programming style for refcount : rpmtsFree and headerFree
    - jbj: rpmio: rescusitate splint annotations.
    - jbj: getdate: ignore internalState changes.
    - jbj: poptIO: add --htdebug.
    - jbj: yarn: convert rpmfc to usage mutex with refcounts.
    - jbj: yarn: convert hashTable to usage mutex with refcounts.
    - jbj: yarn: convert rpmmg to usage mutex with refcounts.
    - jbj: yarn: convert rpmwf refcount to usage mutex.
    - jbj: rpmdb: don't bother with the silly structure assignment initialize.
    - jbj: yarn: wire up rpmdsFini, mark rpmdsFree for destruction.
    - jbj: yarn: wire up rpmtsFini, mark rpmtsFree for destruction.
    - jbj: yarn: for now, don't assert fail, just print FIXME.
    - jbj: yarn: wire up headerScrub, eliminate header{Link,Unlink}.
    - devzero2000: fix: add autofu AC_CPP_FUNC portability macro in the acinclude.m4
    - devzero2000: add autofu AC_CPP_FUNC portability macro
    - jbj: yarn: wire up rpmteFini, eliminate rpmteFree.
    - jbj: yarn: wire up rpmsxFini, eliminate rpmsxFree.
    - jbj: yarn: wire up rpmfiFini, eliminate rpmfiFree.
    - jbj: yarn: wire up rpmgiFini, eliminate rpmgiFree.
    - jbj: rpmtsi: use __FUNCTION__ rather than adding a 2nd arg everywhere.
    - jbj: pgpDig: fix: rpmioFreePoolItem() can return non-NULL, clear ts->dig.
    - jbj: rpmio: add --pgpdebug for pgpDig debugging.